# haddock3

./: .buildinfo  .bumpversion.cfg  .coveragerc  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AI-POLICY.md  AUTHORS  CHANGELOG.md  CITATION.cff  CITING.md  CLAUDE.md  CNS.html  CODE_DOCUMENTATION.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.html  DEVELOPMENT.md  DISCLAIMER.md  Dockerfile  FIXME.md  INSTALL.html  INSTALL.md  INSTALLATION.md  Jenkinsfile  MANIFEST.in  PYTHON.html  README.md  USAGE.html  USAGE.md  action.yml  architecture.html  build.py  citing.html  codecov.yml  contributing.html  entrypoint.sh  examples.html  genindex.html  (+29 more)
.doctrees/: CNS.doctree  CODE_DOCUMENTATION.doctree  DEVELOPMENT.doctree  INSTALL.doctree  PYTHON.doctree  USAGE.doctree  architecture.doctree  citing.doctree  contributing.doctree  environment.pickle  examples.doctree  haddock.clis.doctree  haddock.core.doctree  haddock.doctree  haddock.fcc.calc_fcc_matrix.doctree  haddock.fcc.cluster_fcc.doctree  haddock.fcc.doctree  haddock.gear.doctree  haddock.libs.doctree  haddock.modules.base_cns_module.doctree  haddock.modules.doctree  haddock.modules.topology.topocg.doctree  index.doctree  intro.doctree  modules.doctree
.github/: bug_report.md  pull_request_template.md
_modules/: haddock.html  index.html
_sources/: CODE_DOCUMENTATION.md.txt  INSTALL.md.txt  PYTHON.md.txt  haddock.clis.rst.txt  haddock.core.rst.txt  haddock.fcc.calc_fcc_matrix.rst.txt  haddock.fcc.cluster_fcc.rst.txt  haddock.fcc.rst.txt  haddock.gear.rst.txt  haddock.libs.rst.txt  haddock.modules.base_cns_module.rst.txt  haddock.modules.rst.txt  haddock.modules.topology.topocg.rst.txt  haddock.rst.txt  index.rst.txt  modules.rst.txt
benchmark/: README.md  analyze_bm.py  bm.toml  bmd.py  plots_bm.py  run_benchmark.py  setup_bm.py
clients/: clianalyse.html  clibm.html  clicfg.html  cliclean.html  clicp.html  clidmn.html  clihd3.html  climpi.html  clipp.html  cliscore.html  cliunpack.html  haddock.clis.cli.html  haddock.clis.cli_analyse.html  haddock.clis.cli_bm.html  haddock.clis.cli_cfg.html  haddock.clis.cli_clean.html  haddock.clis.cli_cp.html  haddock.clis.cli_dmn.html  haddock.clis.cli_mpi.html  haddock.clis.cli_pp.html  haddock.clis.cli_re.html  haddock.clis.cli_restraints.html  haddock.clis.cli_score.html  haddock.clis.cli_traceback.html  haddock.clis.cli_unpack.html  haddock.clis.html  haddock.clis.re.clustfcc.html  haddock.clis.re.clustrmsd.html  haddock.clis.re.html  haddock.clis.re.score.html  haddock.clis.restraints.active_passive_to_ambig.html  haddock.clis.restraints.calc_accessibility.html  haddock.clis.restraints.html  haddock.clis.restraints.passive_from_active.html  haddock.clis.restraints.random_removal.html  haddock.clis.restraints.restrain_bodies.html  haddock.clis.restraints.restrain_ligand.html  haddock.clis.restraints.validate_tbl.html  haddock.clis.restraints.webservice.html  haddock.clis.restraints.z_surface_restraints.html  (+2 more)
cns1.3/: README  segmnt.f
containers/: Haddock.def  README.md
data/: 1crn.psf  gen_top.inp
devtools/: build_defaults_rst.py  build_yaml_markdown.py  check_changelog.py  clean_dist_check.py  compare_gdock_rigidbody.py  docs-conf.py  docs-requirements.txt
docker/: README.md
docs/: CNS.md  DEVELOPMENT.md  INSTALL.md  Makefile  PYTHON.md  README.md  USAGE.md  architecture.md  benchmark-tut.md  build_defaults_rst.py  citing.rst  conf.py  continuing_runs.md  examples.md  index.rst  installation.rst  integration_tests.md  intro.md  mpi.md  titles.yaml  tutorials.md  usage.rst
end-to-end_tests/: ab-grid.toml  autoppar_ens.toml  conftest.py  prot-grid.toml  protein_ligand_autotoppar.cfg  test-cg-scoring.py  test-molecules.py  test_deeprank.py  test_gdock.py  test_gdock_flexref.py  test_membrane_docking.py  test_protein-protein-shape.py  test_protein_ligand.py
examples/: README.md  compare_runs.py  diff_capri.sh  run-tests.job  run_examples-full.py  run_examples.py  run_examples.sh  run_tests.py
haddock/: cli.py  config.py  cooking.py  defaults.py  error.py  haddock3.py  mathutil.py  ontology.py  parallel.py  pdbutil.py  run.json  run.toml  run_haddock.py  setup_haddock.py  structure.py  version.py  workflow.py
integration_tests/: __init__.py  conftest.py  test_alascan.py  test_attract.py  test_caching.py  test_caprieval.py  test_cgtoaa.py  test_cli_score.py  test_clustfcc.py  test_cnsjob.py  test_contactmap.py  test_customsym.py  test_deeprank.py  test_defaults_yaml.py  test_emref-cg.py  test_emref.py  test_emscoring.py  test_flexref-cg.py  test_flexref.py  test_full_workflow.py  test_gdock.py  test_grid.py  test_ilrmsdmatrix.py  test_knownCNSerrors.py  test_libutil.py  test_mdref.py  test_mdscoring.py  test_mpi.py  test_prodigyligand.py  test_prodigyprotein.py  test_restraints.py  test_rigidbody-cg.py  test_rigidbody.py  test_rmsdmatrix.py  test_sasascore.py  test_saxs.py  test_topoaa.py
modules/: general_module_params.html  index.html
notebooks/: HADDOCK3-antibody-antigen.ipynb  HADDOCK3-interface-analysis.py  HADDOCK3-protein-dna.ipynb  HADDOCK3-scoring.py  README.md
reference/: index.html
testing/: index.html  integration_tests.html
tests/: __init__.py  conftest.py  test_cli.py  test_cli_analyse.py  test_cli_cfg.py  test_cli_copy.py  test_cli_mpi.py  test_cli_pp.py  test_cli_re.py  test_cli_restraints.py  test_cli_score.py  test_cli_traceback.py  test_cns_paths.py  test_config_reader.py  test_core.py  test_core_supported_molecules.py  test_docking_cg.cfg  test_examples_general.py  test_exceptions.py  test_extend_run.py  test_gear_clean_steps.py  test_gear_config.py  test_gear_config_writer.py  test_gear_expandable_parameters.py  test_gear_haddockmodel.py  test_gear_known_cns_errors.py  test_gear_parameters.py  test_gear_prepare_run.py  test_gear_preprocessing.py  test_gear_pretty_table.py  test_gear_restart.py  test_gear_start_from_copy.py  test_gear_tables.py  test_gear_validations.py  test_gear_yaml2cfg.py  test_gear_zerofill.py  test_libalign.py  test_libcli.py  test_libclust.py  test_libcns.py  (+55 more)
tools/: check-stats.py  compare-scores.py  (+4 more)
(+2358 files in other folders)
