[tool.poetry]
name = "haddock3"
version = "2024.10.0b6"
description = ""
authors = ["BonvinLab <bonvinlab.support@uu.nl>"]
license = "Apache License 2.0"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = [
  "Structural Biology",
  "Biochemistry",
  "Docking",
  "Protein docking",
  "Proteins",
]
packages = [{ include = "haddock", from = "src" }]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.9"
pdb-tools = "^2.5.0"
biopython = "^1.84"
jsonpickle = "^3.3.0"
numpy = "^2"
PyYAML = "^6.0.2"
scipy = "^1.10"
toml = "^0.10.2"
pandas = "^2.2.3"
plotly = "^5.24.1"
freesasa = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.3"
pytest-cov = "^5.0.0"
hypothesis = "^6.115.0"
pytest-mock = "^3.14.0"
fastapi = "^0.115.2"
httpx = "^0.27.2"
mpi4py = "^4.0.1"
kaleido = "0.2.1"

[tool.poetry.scripts]
haddock3 = "haddock.clis.cli:maincli"
haddock3-mpitask = "haddock.clis.cli_mpi:maincli"
haddock3-bm = "haddock.clis.cli_bm:maincli"
haddock3-cfg = "haddock.clis.cli_cfg:maincli"
haddock3-clean = "haddock.clis.cli_clean:maincli"
haddock3-copy = "haddock.clis.cli_cp:maincli"
haddock3-dmn = "haddock.clis.cli_dmn:maincli"
haddock3-pp = "haddock.clis.cli_pp:maincli"
haddock3-score = "haddock.clis.cli_score:maincli"
haddock3-unpack = "haddock.clis.cli_unpack:maincli"
haddock3-analyse = "haddock.clis.cli_analyse:maincli"
haddock3-traceback = "haddock.clis.cli_traceback:maincli"
haddock3-re = "haddock.clis.cli_re:maincli"
haddock3-restraints = "haddock.clis.cli_restraints:maincli"

[[tool.poetry-plugin-pyproject.extension-module]]
name = "haddock.bin.contact_fcc"
sources = ["src/haddock/deps/contact_fcc.cpp"]
extra-compile-args = ["-O2"]

[[tool.poetry-plugin-pyproject.extension-module]]
name = "haddock.bin.fast_rmsdmatrix"
sources = ["src/haddock/deps/fast-rmsdmatrix.c"]
extra-compile-args = ["-Wall", "-O3", "-march=native", "-std=c99"]
extra-link-args = ["-lm"]

[build-system]
requires = ["poetry-core", "setuptools>=45", "wheel"]
build-backend = "poetry.core.masonry.api"
