[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haddock3"
version = "2025.5.0"
description = "HADDOCK3"
readme = "README.md"
authors = [{ name = "BonvinLab", email = "bonvinlab.support@uu.nl" }]
license = { text = "Apache License 2.0" }
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
keywords = [
  "Structural Biology",
  "Biochemistry",
  "Docking",
  "Protein docking",
  "Proteins",
]
requires-python = ">=3.9, <3.14"
dependencies = [
  'pdb-tools>=2.5.0',
  'biopython==1.*',
  'jsonpickle>=2.1.0',
  'numpy==2.*',
  'pyyaml>=6.0',
  'scipy>=1.10.0',
  'toml>=0.10.2',
  'pandas==2.*',
  'prodigy-prot==2.3.0',
  'prodigy-lig==1.1.3',
  'plotly==6.0.1',
  'freesasa>=2.2.1',
]

[project.optional-dependencies]
dev = [
  "coverage==7.8.0",
  "pytest==8.3.5",
  "pytest-cov==6.1.1",
  "hypothesis==6.131.9",
  "pytest-mock==3.14.0",
  "fastapi==0.115.12",
  "httpx==0.28.1",
  "mpi4py==4.0.3",
  "kaleido==0.2.1",
  "pytest-random-order==1.1.1",
]
docs = [
  "sphinx>=7",
  "sphinx-argparse>=0.4.0",
  "sphinx_rtd_theme>=3.0.1",
  "CommonMark>=0.9.1",
  "mock>=5.1.0",
  "myst-parser>=3.0.1",
]

[project.urls]
Homepage = "https://github.com/haddocking/haddock3"
Documentation = "https://github.com/haddocking/haddock3#readme"
"Issue Tracker" = "https://github.com/haddocking/haddock3/issues"
"Discussion Forum" = "https://github.com/haddocking/haddock3/issues"

[project.scripts]
haddock3 = "haddock.clis.cli:maincli"
haddock3-mpitask = "haddock.clis.cli_mpi:maincli"
haddock3-cfg = "haddock.clis.cli_cfg:maincli"
haddock3-clean = "haddock.clis.cli_clean:maincli"
haddock3-copy = "haddock.clis.cli_cp:maincli"
haddock3-dmn = "haddock.clis.cli_dmn:maincli"
haddock3-pp = "haddock.clis.cli_pp:maincli"
haddock3-score = "haddock.clis.cli_score:maincli"
haddock3-unpack = "haddock.clis.cli_unpack:maincli"
haddock3-analyse = "haddock.clis.cli_analyse:maincli"
haddock3-traceback = "haddock.clis.cli_traceback:maincli"
haddock3-re = "haddock.clis.cli_re:maincli"
haddock3-restraints = "haddock.clis.cli_restraints:maincli"

[tool.setuptools]
packages = ["haddock"]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
haddock = ["bin/*"]
